# investent-funds-monitor

./: .gitignore  pyproject.toml
investent_funds_monitor/: collector_threads.py  cvm_daily_inf_collector.py
investment_funds_monitor/: __init__.py  bc_cdi_daily.py  cvm_daily_inf_collector.py  download_log_file.json  update_db.py
