[tool.poetry]
name = "investent-funds-monitor"
version = "0.1.0"
description = ""
authors = ["Tiago Henrique <tiagohs.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "investent_funds_monitor"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.5"
requests = "^2.31.0"
parsel = "^1.9.0"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
isort = "^5.13.2"
ipdb = "^0.13.13"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
